--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Whitney Light';
-    src: url('.fonts/whitneylight.woff') format('woff');
+    src: url('. fonts/whitneylight.woff') format('woff');
 }
 
 @font-face {
@@ -53,3 +53,58 @@ img {
     max-width: 100%;
     display: block;
 }
+
+.hero{
+    background: url('../image/hero-bg.jpg') center/cover ;
+}
+
+.main-header{
+    height: 8rem;
+    padding: 0 2.4rem;
+}
+
+.container{
+    max-width: var(--container-width);
+    margin: 0 auto;
+}
+
+.main-nav{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo{
+    width: 12.4rem;
+}
+
+.nav-list{
+    display: none;
+}
+
+.nav-items-right{
+    display: flex;
+    align-items: center;
+}
+
+.nav-item { }
+.nav-link { }
+.btn { }
+.btn-small { }
+.btn-light { }
+.btn-login { }
+.mobile-toggle { }
+.bx { }
+.bx-menu { }
+.bx-x { }
+.row { }
+.hero-content-wrap { }
+.title { }
+.primary-title { }
+.hero-description { }
+.hero-btn-group { }
+.btn-large { }
+.bytn-light { }
+.bx-download { }
+.btn-dark { }
