--- a/css/style.css
+++ b/css/style.css
@@ -141,15 +141,28 @@ display: none;
 .row { 
     display: grid;
     grid-template-columns: repeat(var(--num-of-grid-columns), 1fr);
+    gap: 0 2rem;
+    padding: var(--section-spacing);
 }
 
-.hero-content-wrap { }
+.hero-content-wrap { 
+    grid-column: span var(--num-of-grid-columns);
+    color: var(--light-clr);
+}
 
-.title { }
+.title { 
+    font-family: var(--main-font-family-bold);
+}
 
-.primary-title { }
+.primary-title {
+    font-size: var(--primary-title-font-size);
+    line-height: 120%;
+ }
 
-.hero-description { }
+.hero-description {
+    line-height: 3.2rem;
+    margin: 2.4rem 0 0 0;
+ }
 
 .hero-btn-group { }
 
