--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,17 @@
 @font-face {
     font-family: 'Whitney Light';
-    src: url('.fonts/whitneylight.woff') format('woff');
+    src: url('/assests/fonts/whitneylight.woff') format('woff');
 }
 
 @font-face {
     font-family: 'Whitney Medium';
-    src: url('.fonts/whitneymedium.woff') format('woff');
+    src: url('/assests/fonts/whitneymedium.woff') format('woff');
 }
 
 @font-face {
     font-family: 'Whitney Bold';
-    src: url('.fonts/whitneybold.woff') format('woff');
+    src: url('/assests/fonts/whitneybold.woff') format('woff');
 }
-
 * {
     margin: 0;
     padding: 0;
@@ -164,12 +163,55 @@ display: none;
     margin: 2.4rem 0 0 0;
  }
 
-.hero-btn-group { }
+.hero-btn-group .btn-light {
+    margin: 2.4rem 2.4rem 0 0;
+    display: inline-flex;
+ }
 
-.btn-large { }
 
-.btn-light { }
+ .hero-btn-group .btn-light i{
+    align-self: center;
+    margin-right: .8rem;
+ }
+.btn-large {
+    padding: 1.6rem 3.2rem;
+    border-radius: 2.8rem;
+ }
 
-.bx-download { }
+.btn-dark {
+    background-color: var(--dark-clr);
+    color: var(--light-clr);
+    margin-top: 2.4rem;
+    transition: background-color .5s;
+ }
+ .btn-dark:hover{
+     background-color: #36393f;
+ }
 
-.btn-dark { }
+ /* collaboration*/
+ .collaboration { }
+
+.row { }
+
+.container { }
+
+.grid-image {
+    margin-top: 2.4rem;
+    grid-column: span 4;
+ }
+
+.text-group {
+    margin-top: 2rem;
+    grid-column: span var(--num-of-grid-columns);
+ }
+
+.title { }
+
+.secondary-title { 
+    font-size: var(--secondary-title-font-size);
+}
+
+.text-group p{
+    margin-top: 2rem;
+    line-height: 3.2rem;
+}
