download section styles added

--- a/css/style.css
+++ b/css/style.css
@@ -251,3 +251,40 @@ display: none;
     grid-column: span var(--num-of-grid-columns);
     margin-top: 2.4rem;
 }
+
+
+/* download section */
+.download {
+    background-color:var(--off-white-clr);
+    position: relative;
+
+ }
+
+ .download h2{
+    font-size: 3.2rem;
+    font-family: var(--main-font-family-medium);
+}
+ 
+
+.remove-grid { 
+    display: block;
+    padding-top: 0;
+    text-align: center;
+}
+.sparkles {
+    display: inline-block;
+ }
+
+.btn-brand { 
+    background-color:var(--brand-clr) ;
+    color: var(--light-clr);
+    transition: background-color .5s;
+}
+
+.download .btn-brand{
+    margin-top: 4rem;
+}
+
+.btn-brand:hover{
+    background-color: #8ea1e1;
+}
